# KIB-AgentSec-Sentinel

./: .gitignore  README.md  pyproject.toml
configs/: balanced.yaml  default.yaml  precision.yaml  recall.yaml
rules/: default_rules.yaml
scripts/: analyze_predictions.py  evaluate_example.py  make_candidates.py  make_synthetic_sample.py  offline_check.py  run_detect.py  threshold_sweep.py
src/agentsec/: __init__.py  chains.py  config.py  llm.py  models.py  pcap.py  pipeline.py  readers.py  rules.py  scoring.py  sysmon.py  utils.py
tests/: test_pipeline.py  test_rules.py
