[project]
name = "kib-agentsec-sentinel"
version = "0.1.0"
description = "Offline AI agent malicious behavior detection baseline for Linux audit/session/pcap and Windows Sysmon-style samples."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
pcap = [
  "scapy>=2.5.0",
  "dpkt>=1.9.8",
]
evtx = [
  "python-evtx>=0.7.4",
]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
